# mapboard-v2

./: .gitignore  .prettierrc  OVERVIEW.md  README.md  package-lock.json
python-backend/: README.md  clear_db.py  mypy.ini  pyproject.toml  ruff.toml
python-backend/alembic/: env.py
python-backend/alembic/versions/: 0896862964bf_remove_positional_columns.py  127baf24a53c_remove_function_id_from_flow_json.py  20251221_2107_expressions_drop_legacy.py  2f02697e6dde_migrate_edges_to_new_format.py  3bb36eb87dbf_remove_indent_from_flow_json.py  3f6fccf4a6fe_migrate_to_flow_json.py  4943d76deb2d_denormalize_flow_json.py  4d691f7a1d67_rename_join_to_agentic_join.py  6c20c30ece58_rework_node_types.py  6ec7eb64f2f6_add_graph_id_to_expressions.py  7534d6f119ba_remove_node_color.py  802dcdd110ae_expression_to_expression.py  8e0d2a8af248_add_graph_history.py  8fd3f410ec88_remove_iid_from_flow_json.py  a7a0b38c232d_migrate_expression_types.py  ba83352ad817_add_expression_type.py  bb1df5648eb6_rename_branch_to_switch_and_merge_to_.py  cfebe1f0cace_add_to_expression_id_to_edge.py  d2e185cb0304_rename_expression_to_slot.py  e84c6de05179_initial_migration.py  eac567a2e71b_convert_start_end_nodes_to_no_slots.py
python-backend/app/: __init__.py  config.py  constants.py  context.py  db.py  events.py  exceptions.py  main.py  models.py  repository.py  schemas.py  ws.py
python-backend/app/api/: edges.py  graphs.py  nodes.py  users.py  ws.py
python-backend/app/edges/: __init__.py  endpoints.py  repository.py  schemas.py  service.py
python-backend/app/expressions/: __init__.py  (+4 more)
(+179 files in other folders)
